--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "compil": "tsc",
     "lint": "eslint src/**/*.ts",
+    "circular": "madge --warning  --circular  src/**.ts",
     "test": "jest",
     "start": "tsc && node dist/index.js"
   },
@@ -28,6 +29,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "jest": "^26.6.3",
+    "madge": "^4.0.2",
     "ts-node": "^9.1.1"
   }
 }
